# advent-of-code-2022

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
src/: day01.rs  init.rs  main.rs  scaffold.rs  solve.rs  utils.rs
src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_template.rs  mod.rs  utils.rs
