[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.0"
color-eyre = "0.6.2"
test-case = "2.2.2"
once_cell = "1.16.0"
regex = "1.7.0"
chrono = { version = "0.4.23", features = ["clock"] }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = "0.11.13"
scraper = "0.13.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
nom = "7.1.2"
seq-macro = "0.3.2"
camino = "1.1.1"
